selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.3.abra
val m: Map<Int, String> = { (123): None, (456): "hello" }